--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,17 @@
 [package]
 name = "ministerium"
 version = "0.1.0"
-edition = "2026"
+edition = "2024"
 description = "A lightweight orchestration and deployment agent triggered by GitHub webhooks"
 
 [dependencies]
+axum = "0.8.8"
+bollard = "0.19.4"
+dotenv = "0.15.0"
+hex = "0.4.3"
+hex-literal = "1.1.0"
+hmac = "0.12.1"
+serde = "1.0.228"
+serde_json = "1.0.148"
+sha2 = "0.10.9"
+tokio = { version = "1.49.0", features = ["full"] }
